# hard-negatives-ranking-datasets-maker

./: .gitignore  README.md  deduplicate_uploaded.py  main.py  pyproject.toml
config/: codeedit.yaml  coir.yaml  coir_cosqa.yaml  coir_dedupe.yaml  coir_example.yaml  csn.yaml  docstring_to_code-multi-lang-codesearch-query-qwen.yaml  docstring_to_code-multilang-embedding-qwen3.yaml  docstring_to_code.yaml
src/: base_encoder.py  config.py  data_loader.py  encoder.py  formatter.py  miner.py  sentence_transformer_encoder.py  uploader.py
